--- a/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
+++ b/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=oumaimayahyaoui;Database=EspaceClientSTB;Encrypt=False;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
