--- a/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
+++ b/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=oumaimayahyaoui;Database=EspaceClientSTB;Encrypt=False;TrustServerCertificate=True"
+    "Database": "server= . ;Database=EspaceClientSTB;integrated security=true;trust server certificate=true"
 
   },
   "Logging": {
