--- a/src/Services/STBEverywhere/STBEverywhere.API/STBEverywhere.API.csproj
+++ b/src/Services/STBEverywhere/STBEverywhere.API/STBEverywhere.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>ae36368f-036f-44f2-8e66-40c575d770e7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
