--- a/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
+++ b/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "server=.;database=EspaceClientSTB;integrated security=true;trust server certificate=true"
+    "Database": "server=oumaimayahyaoui;Database=EspaceClientSTBE;integrated security=true;trust server certificate=true"
 
   },
   "Logging": {
