--- a/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
+++ b/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "server=oumaimayahyaoui;Database=STBEverywhereEspaceClient;integrated security=true;trust server certificate=true"
+    "Database": "server=oumaimayahyaoui;Database=STBEverywhereEspaceClient;Encrypt=False;TrustServerCertificate=True"
 
   },
   "Logging": {
