--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -3,25 +3,49 @@ version: '3.4'
 services:
 
 
-  stbeverywhereespaceclient:
-    container_name: stbeverywhereespaceclient
+  
+
+  stbeverywhereespaceclientdb:
+    container_name: StbEverywhereEspaceClientdb
     environment: 
-    - ENV_VAR1=valeur1
-    - ENV_VAR2=valeur2
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=SwN12345678
     restart: always
     ports: 
-    - "1433:1433"
+      - "1433:1433"
+    
+  
 
-
-
-  stbeverywhere.api:
+  
+  stbeverywhereapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=stbeverywhereespaceclientdb;Database=STBEverywhereEspaceClient;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True
+      - "ElasticConfiguration:Uri=http://elasticsearch:9200"
+
+    depends_on:
+      - stbeverywhereespaceclientdb
+    restart: always
     ports:
-      - "8080"
-      - "8081"
+      - "6003:8080"
+      - "6063:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+
+
+
+
+
+   
+  
+
+
+
+
+
+
+ 
