--- a/src/Services/STBEverywhere/STBEverywhere.API/STBEverywhere.API.csproj
+++ b/src/Services/STBEverywhere/STBEverywhere.API/STBEverywhere.API.csproj
@@ -11,7 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Carter" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+		
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
