--- a/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
+++ b/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
@@ -3,10 +3,16 @@
     "Database": "server=oumaimayahyaoui;Database=STBEverywhereEspaceClient;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
 
   },
-  "Logging": {
-    "LogLevel": {
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
