--- a/src/Services/STBEverywhere/STBEverywhere.API/STBEverywhere.API.csproj
+++ b/src/Services/STBEverywhere/STBEverywhere.API/STBEverywhere.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,6 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
 	  <PackageReference Include="Carter" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.7.0" />
@@ -23,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\Common.Logging\Common.Logging.csproj" />
     <ProjectReference Include="..\STBEverywhere.Application\STBEverywhere.Application.csproj" />
     <ProjectReference Include="..\STBEverywhere.Infrastructure\STBEverywhere.Infrastructure.csproj" />
   </ItemGroup>
