--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -13,6 +13,8 @@ services:
     restart: always
     ports: 
       - "1433:1433"
+    volumes:
+      - sqlserverdata:/var/opt/mssql
     
   
 
@@ -49,3 +51,57 @@ services:
 
 
  
+  emailservice.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+    ports:
+      - "8080"
+
+
+  smsnotifaction:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+    ports:
+      - "8080"
+      - "8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+
+  rabbitmq:
+    container_name: RabbitMQ
+    restart: always
+    ports:
+        - "5672:5672"
+        - "15672:15672"
+ 
+
+  elasticsearch:
+    container_name: elasticsearch
+    restart: always
+    environment:
+        - xpack.monitoring.collection.enabled
+        - xpack.watcher.enabled=false
+        - xpack.security.enabled=false
+        - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+        - discovery.type=single-node
+    ports:
+        - "9200:9200"
+    volumes:
+        - elasticsearch-data:/usr/share/elasticsearch/data  
+
+
+
+  kibana:
+    container_name: kibana
+    restart: always
+    environment:        
+        - ELASTICSEARCH_URL=http://elasticsearch:9200
+    depends_on:
+        - elasticsearch
+    ports:
+        - "5601:5601"
