--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -17,3 +17,40 @@ services:
 
 
  
+  emailservice.api:
+    image: ${DOCKER_REGISTRY-}emailserviceapi
+    build:
+      context: .
+      dockerfile: Services/Email/EmailService.API/Dockerfile
+
+
+  smsnotifaction:
+    image: ${DOCKER_REGISTRY-}smsnotifaction
+    build:
+      context: Desktop/EspaceClientSTBMicroservices/src
+      dockerfile: ../../../Services/SMS/SmsNotifaction-main/src/SMSMicroservices/SmsNotifaction/Dockerfile
+
+
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.12.2
+
+
+  healthcheck:
+    image: ${DOCKER_REGISTRY-}healthcheck
+    build:
+      context: .
+      dockerfile: HealthCheck/HealthCheck/Dockerfile
+
+
+volumes:
+  elasticsearch-data:
+  sqlserverdata: 
