--- a/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
+++ b/src/Services/STBEverywhere/STBEverywhere.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "server=oumaimayahyaoui;Database=STBEverywhereEspaceClient;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
+    "Database": "server=localhost,1434;Database=STBEverywhereEspaceClient;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
 
   },
   "ElasticConfiguration": {
