--- a/src/Services/STBEverywhere/STBEverywhere.Application/STBEverywhere.Application.csproj
+++ b/src/Services/STBEverywhere/STBEverywhere.Application/STBEverywhere.Application.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
 </Project>
